/*
 * This file was generated by the Gradle 'init' task.
 */
buildscript {
    ext {
        JBOSS_VERSION = '3.7.0.Final'
        JAVAX_INJECT_VERSION = '1'
        CDI_API_VERSION = '2.0.SP1'
        //
        libraries = [
                javaWsRsApi:
                        dependencies.create('javax.ws.rs:javax.ws.rs-api') {
                            version {
                                strictly '2.0'
                                //              strictly '[1.7, 1.8['
                                //              prefer '1.7.25'
                            }
                        }
        ]
    }
}

allprojects {
    group = 'org.jkcsoft.space'
    version = '0.9-SNAPSHOT'
}

subprojects {

    apply plugin: 'java'
    apply plugin: 'maven-publish'

    publishing {
        publications {
            library(MavenPublication) {
                from components.java
            }
        }
        repositories {
            mavenLocal()
//            maven {
//                url = uri("${buildDir}/publishing-repository")
//            }
        }
    }
    
    repositories {
        mavenLocal()
        mavenCentral()
//        maven {
//            url = 'http://repo.maven.apache.org/maven2'
//        }
    }

    sourceCompatibility = '12'

    publishing {
        publications {
            maven(MavenPublication) {
                from(components.java)
            }
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
